se agregan cors